removed sidebar option, going with a simple form

--- a/add.html
+++ b/add.html
@@ -5,9 +5,6 @@
 <body>
 
 <form>
-<div id="sidebar">
-	<p>Controls go here</p>
-</div>
 <div id="main_controls">
 	<div id="navigation_location">
 	</div>
@@ -104,6 +101,12 @@
 						<td><input type="button" value="Take Photo" id="take_photo_button" /></td>
 					</tr>
 				</table>
+			</fieldset>
+		</div>
+		<div class="form_snippet">
+			<fieldset>
+				<legend>Allowed Into</legend>
+				<p>Allowed into premises:</p>
 			</fieldset>
 		</div>
 	</div>
